erDiagram

    %% Customer Core Domain
    contacts {
        id string PK
        customer_id string FK
        customer_id string FK
        customer_id string FK
        customer_id string FK
        first_name string
        last_name string
        full_name string
        postal_code string
        updated_by string
        updated_at string
        ...
    }

    customer_channels {
        id string PK
        code string
        name string
        updated_at string
    }

    customer_documents {
        id string PK
        customer_id string FK
        customer_id string FK
        customer_id string FK
        verified_by string FK
        created_by string FK
        updated_by string FK
        order_id string FK
        service_record_id string FK
        payment_stage_id string FK
        customer_name string
        document_type string
        document_name string
        issue_date string
        expiry_date string
        file_name string
        file_type string
        full_name string
        ...
    }

    customer_sources {
        id string PK
        code string
        name string
        updated_at string
    }

    customers {
        id string PK
        source_id string FK
        channel_id string FK
        owner_name string
        created_by_name string
        updated_by_external string
        updated_by_name string
        updated_at_src string
        name string
        code string
        parent_name string
        ...
    }

    %% Service Domain
    service_records {
        id string PK
        customer_id string FK
        customer_id string FK
        customer_id string FK
        customer_id string FK
        product_id string FK
        contact_id string FK
        service_type_id string FK
        sales_user_id string FK
        referral_customer_id string FK
        created_by string FK
        updated_by string FK
        service_record_id string FK
        status string
        service_name string
        expected_start_date string
        expected_completion_date string
        updated_at string
        owner_name string
        created_by_name string
        updated_by_external string
        ...
    }

    service_types {
        id string PK
        service_type_id string FK
        customer_id string FK
        product_id string FK
        contact_id string FK
        sales_user_id string FK
        code string
        name string
        name_en string
        updated_at string
    }

    %% Order & Payment Domain
    orders {
        id string PK
        customer_id string FK
        customer_id string FK
        customer_id string FK
        customer_id string FK
        product_id string FK
        service_record_id string FK
        product_name string
        sales_username string
        total_amount string
        currency_code string
        discount_amount string
        final_amount string
        status_id string
        status_code string
        ...
    }

    payment_stages {
        id string PK
        order_id string FK
        stage_name string
        amount string
        paid_amount string
        remaining_amount string
        currency_code string
        trigger_date string
        due_date string
        expected_payment_date string
        ...
    }

    payments {
        id string PK
        order_id string FK
        payment_stage_id string FK
        payment_type string
        amount string
        currency_code string
        payment_date string
        payer_name string
        status string
        updated_at string
        ...
    }

    %% Related Domain
    organizations {
        id string PK
        name string
        code string
        organization_type string
        postal_code string
        country_code string
        company_type string
        industry_code string
        established_date string
        ...
    }

    products {
        id string PK
        service_type_id string FK
        owner_name string
        created_by_name string
        updated_by_external string
        updated_by_name string
        updated_at_src string
        name string
        code string
        vendor_name string
        ...
    }

    users {
        id string PK
        username string
        display_name string
        updated_at string
        ...
    }

    %% Relationships
    customers ||--o{ customer_sources : "source_id"
    customers ||--o{ customer_channels : "channel_id"
    contacts ||--o{ customer_sources : "customer_id"
    contacts ||--o{ customer_documents : "customer_id"
    contacts ||--o{ customer_channels : "customer_id"
    contacts ||--o{ customers : "customer_id"
    orders ||--o{ customer_sources : "customer_id"
    orders ||--o{ customer_documents : "customer_id"
    orders ||--o{ customer_channels : "customer_id"
    orders ||--o{ customers : "customer_id"
    orders ||--o{ products : "product_id"
    payments ||--o{ orders : "order_id"
    products ||--o{ service_types : "service_type_id"
    service_records ||--o{ customer_sources : "customer_id"
    service_records ||--o{ customer_documents : "customer_id"
    service_records ||--o{ customer_channels : "customer_id"
    service_records ||--o{ customers : "customer_id"
    service_records ||--o{ products : "product_id"
    service_records ||--o{ contacts : "contact_id"
    service_types ||--o{ service_types : "service_type_id"
    service_types ||--o{ customers : "customer_id"
    service_types ||--o{ products : "product_id"
    service_types ||--o{ contacts : "contact_id"
    service_types ||--o{ users : "sales_user_id"
    orders ||--o{ service_records : "service_record_id"
    service_records ||--o{ service_types : "service_type_id"
    service_records ||--o{ users : "sales_user_id"
    service_records ||--o{ customers : "referral_customer_id"
    service_records ||--o{ users : "created_by"
    service_records ||--o{ users : "updated_by"
    service_records ||--o{ service_records : "service_record_id"
    payments ||--o{ payment_stages : "payment_stage_id"
    customer_documents ||--o{ customer_sources : "customer_id"
    customer_documents ||--o{ customer_channels : "customer_id"
    customer_documents ||--o{ customers : "customer_id"
    payment_stages ||--o{ orders : "order_id"
    customer_documents ||--o{ users : "verified_by"
    customer_documents ||--o{ users : "created_by"
    customer_documents ||--o{ users : "updated_by"
    customer_documents ||--o{ orders : "order_id"
    customer_documents ||--o{ service_records : "service_record_id"
    customer_documents ||--o{ payment_stages : "payment_stage_id"